Creature now available

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-spring:
-  data:    mongodb:      uri: //localhost:27017/Homm3
+#spring:
+  #data:    #mongodb:      #uri: mongodb://localhost:27017/Homm3-->
 server:
   port: 8090
